add mchp policy

--- a/index.org
+++ b/index.org
@@ -3717,6 +3717,620 @@ see [[./src/SharpReportTemplate.org]]
       
 #+end_src
 
+** 2013-12-02-research-protocol-we-used-for-our-bushfire-project
+#+name:research-protocol-we-used-for-our-bushfire-project-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-02-research-protocol-we-used-for-our-bushfire-project.md :exports none :eval no :padline no
+  ---
+  name: 2013-12-02-research-protocol-we-used-for-our-bushfire-project
+  layout: post
+  title: research-protocol-we-used-for-our-bushfire-project
+  date: 2013-12-02
+  categories:
+  - research methods
+  ---
+
+  - For a three year project on Bushfire smoke and Health we used the following structure in a wiki
+  
+  #### Sections:
+      A.Background        
+      B.Proposals         
+      C.Approvals         
+      D.Budget    
+      E.Datasets  
+      F.Analysis  
+      G.Literature        
+      H.Communication     
+      I.Correspondance    
+      J.Meetings  
+      K.Completion        
+      ContactDetails      
+      README
+      TODO        
+  
+  #### Conclusion
+  - it worked quite well in the first year.
+  - we didn't use it much after that.
+  - it is still on the ANU webserver.  I sometimes refer back to it now, a couple of years later.
+
+    
+#+end_src
+
+** 2013-12-02-research-protocol-for-manitoba-centre-for-health-policy
+#+name:research-protocol-for-manitoba-centre-for-health-policy-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-02-research-protocol-for-manitoba-centre-for-health-policy.md :exports none :eval no :padline no
+  ---
+  name: 2013-12-02-research-protocol-for-manitoba-centre-for-health-policy
+  layout: post
+  title: research-protocol-for-manitoba-centre-for-health-policy
+  date: 2013-12-02
+  categories:
+  - research methods
+  ---
+  
+  - When we started planning for a three year project on bushfire smoke we did some planning
+  - We had a deep discussion about this research management protocol from [University Manitoba Centre for Health Policy](http://umanitoba.ca/faculties/medicine/units/community_health_sciences/departmental_units/mchp/protocol/media/manage_guidelines.pdf)
+
+  
+  <div id="content">
+  <h1 class="title">Data Management Plan Checklist</h1>
+  
+  
+  <div id="table-of-contents">
+  <h2>Table of Contents</h2>
+  <div id="text-table-of-contents">
+  <ul>
+  <li><a href="#sec-1">1 U-Manitoba Centre for Health Policy Guidelines</a>
+  <ul>
+  <li><a href="#sec-1-1">1.1 Confidentiality</a></li>
+  <li><a href="#sec-1-2">1.2 Project Team Makeup</a>
+  <ul>
+  <li><a href="#sec-1-2-1">1.2.1 Principal Investigator</a></li>
+  <li><a href="#sec-1-2-2">1.2.2 Research Coordinator</a></li>
+  <li><a href="#sec-1-2-3">1.2.3 The Programmer Coordinator</a></li>
+  <li><a href="#sec-1-2-4">1.2.4 Programmer Analyst</a></li>
+  <li><a href="#sec-1-2-5">1.2.5 Research Support</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-3">1.3 Project Team considerations</a>
+  <ul>
+  <li><a href="#sec-1-3-1">1.3.1 Roles</a></li>
+  <li><a href="#sec-1-3-2">1.3.2 Continuity</a></li>
+  <li><a href="#sec-1-3-3">1.3.3 Access levels</a></li>
+  <li><a href="#sec-1-3-4">1.3.4 Working group</a></li>
+  <li><a href="#sec-1-3-5">1.3.5 Atmospherics</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-4">1.4 File organization and Documentation Development.</a>
+  <ul>
+  <li><a href="#sec-1-4-1">1.4.1 Managing MCHP resources</a></li>
+  <li><a href="#sec-1-4-2">1.4.2 MCHP directory structure</a></li>
+  <li><a href="#sec-1-4-3">1.4.3 Managing project files</a></li>
+  <li><a href="#sec-1-4-4">1.4.4 Recommended Directories</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-5">1.5 Communication</a>
+  <ul>
+  <li><a href="#sec-1-5-1">1.5.1 E-mail</a></li>
+  <li><a href="#sec-1-5-2">1.5.2 Meetings</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-6">1.6 Administrative</a>
+  <ul>
+  <li><a href="#sec-1-6-1">1.6.1 Time entry</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-7">1.7 Report preparation</a>
+  <ul>
+  <li><a href="#sec-1-7-1">1.7.1 Reliability and Validity Checks</a></li>
+  </ul>
+  </li>
+  <li><a href="#sec-1-8">1.8 Project Completion</a>
+  <ul>
+  <li><a href="#sec-1-8-1">1.8.1 Final Project Meeting.</a></li>
+  <li><a href="#sec-1-8-2">1.8.2 Final Documentation Review.</a></li>
+  <li><a href="#sec-1-8-3">1.8.3 System Cleanup.</a></li>
+  <li><a href="#sec-1-8-4">1.8.4 Integration of new material to institution repository</a></li>
+  </ul>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  </div>
+  </div>
+  
+  <div id="outline-container-1" class="outline-2">
+  <h2 id="sec-1"><span class="section-number-2">1</span> U-Manitoba Centre for Health Policy Guidelines</h2>
+  <div class="outline-text-2" id="text-1">
+  
+  <p>These guidelines come from:
+  </p>
+  <p>
+  \noindent <a href="http://umanitoba.ca/faculties/medicine/units/mchp/protocol/media/manage_guidelines.pdf">http://umanitoba.ca/faculties/medicine/units/mchp/protocol/media/manage_guidelines.pdf</a><br/>
+  </p>
+  <p>
+  Most of the material below is taken verbatim from the original. Unfortunately many of the items described below have links to internal MCHP documents that we cannot access.  Nonetheless the structure of the guidelines provides a useful skeleton to frame our thinking. 
+  </p>
+  <p>
+  The following areas should be reviewed with project team members near the beginning of the study and throughout the
+  project as needed:
+  </p><ul>
+  <li>Confidentiality
+  </li>
+  <li>Project team
+  </li>
+  <li>File organization and documentation development
+  </li>
+  <li>Communication
+  </li>
+  <li>Administrative
+  </li>
+  <li>Report Preparation
+  </li>
+  <li>Project Completion
+  </li>
+  </ul>
+  
+  
+  </div>
+  
+  <div id="outline-container-1-1" class="outline-3">
+  <h3 id="sec-1-1"><span class="section-number-3">1.1</span> Confidentiality</h3>
+  <div class="outline-text-3" id="text-1-1">
+  
+  <p>Maintaining data access
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-2" class="outline-3">
+  <h3 id="sec-1-2"><span class="section-number-3">1.2</span> Project Team Makeup</h3>
+  <div class="outline-text-3" id="text-1-2">
+  
+  <p>Roles and contact information should be documented on the project website for the following, where applicable (information may also be included on level of access approved for each team member).
+  </p>
+  
+  </div>
+  
+  <div id="outline-container-1-2-1" class="outline-4">
+  <h4 id="sec-1-2-1"><span class="section-number-4">1.2.1</span> Principal Investigator</h4>
+  <div class="outline-text-4" id="text-1-2-1">
+  
+  <p>This is the lead person on the project, who assumes responsibility for delivering the project. The PI makes decisions on project direction and analysis requirements, with input from programmers and the research coordinator (an iterative process). If there is more than one PI (e.g., multi-site studies), overall responsibility for the study needs to be determined, and how the required work will be allocated and coordinated among the co-investigators. Researcher Workgroup website (internal link) 
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-2-2" class="outline-4">
+  <h4 id="sec-1-2-2"><span class="section-number-4">1.2.2</span> Research Coordinator</h4>
+  <div class="outline-text-4" id="text-1-2-2">
+  
+  <p>Th RC is always assigned to deliverables and is usually brought in on other types of projects involving multiple sites, investigators and/or programmers. Responsibilities include project documentation, project management (e.g., ensuring that timelines are met, ensuring that project specifications are being followed), and working with both investigator(s) and the Programmer Coordinator throughout the project to coordinate project requirements. 
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-2-3" class="outline-4">
+  <h4 id="sec-1-2-3"><span class="section-number-4">1.2.3</span> The Programmer Coordinator</h4>
+  <div class="outline-text-4" id="text-1-2-3">
+  
+  <p>The PC is a central management role who facilitates assignment of programming resources to projects, ensuring the best possible match among programmers and investigators.
+  Research Coordinator Workgroup website(internal link) 
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-2-4" class="outline-4">
+  <h4 id="sec-1-2-4"><span class="section-number-4">1.2.4</span> Programmer Analyst</h4>
+  <div class="outline-text-4" id="text-1-2-4">
+  
+  <p>This is primarily responsible for programming and related programming documentation (such that the purpose of the program and how results were derived can be understood by others). However, a major role may be taken in the analyses of the project as well, and this will characteristically vary with the project.
+  Programmer Analyst Workgroup website(internal link) 
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-2-5" class="outline-4">
+  <h4 id="sec-1-2-5"><span class="section-number-4">1.2.5</span> Research Support</h4>
+  <div class="outline-text-4" id="text-1-2-5">
+  
+  <p>This is primarily responsible for preparing the final product (i.e., the report), including editing and formatting of final graphs and manuscript and using Reference Manager to set up the references. Research support also normally sets up and attends working group meetings. All requests for research support go through the Office Manager.
+  </p>
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-3" class="outline-3">
+  <h3 id="sec-1-3"><span class="section-number-3">1.3</span> Project Team considerations</h3>
+  <div class="outline-text-3" id="text-1-3">
+  
+  
+  </div>
+  
+  <div id="outline-container-1-3-1" class="outline-4">
+  <h4 id="sec-1-3-1"><span class="section-number-4">1.3.1</span> Roles</h4>
+  <div class="outline-text-4" id="text-1-3-1">
+  
+  <p>It is important to clarify everyone's roles at the beginning of the project; for example, whether the investigator routinely expects basic graphs and/or programming logs from the programmer.
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-3-2" class="outline-4">
+  <h4 id="sec-1-3-2"><span class="section-number-4">1.3.2</span> Continuity</h4>
+  <div class="outline-text-4" id="text-1-3-2">
+  
+  <p>It is highly desirable to keep the same personnel, from the start of the project, where possible. It can take some time to develop a cohesive working relationship, particularly if work styles are not initially compatible. Furthermore, requesting others to temporarily fill in for team absences is generally best avoided, particularly for programming tasks (unless there is an extended period of absence). The original programmer will know best the potential impact of any changes that may need to be made to programming code.
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-3-3" class="outline-4">
+  <h4 id="sec-1-3-3"><span class="section-number-4">1.3.3</span> Access levels</h4>
+  <div class="outline-text-4" id="text-1-3-3">
+  
+  <p>Access to MCHP internal resources (e.g., Windows, Unix) need to be assessed for all team members and set up as appropriate to their roles on the project.
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-3-4" class="outline-4">
+  <h4 id="sec-1-3-4"><span class="section-number-4">1.3.4</span> Working group</h4>
+  <div class="outline-text-4" id="text-1-3-4">
+  
+  <p>A WG is always set up for deliverables (and frequently for other projects):
+  Terms of Reference for working group (internal)
+  </p>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-3-5" class="outline-4">
+  <h4 id="sec-1-3-5"><span class="section-number-4">1.3.5</span> Atmospherics</h4>
+  <div class="outline-text-4" id="text-1-3-5">
+  
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-4" class="outline-3">
+  <h3 id="sec-1-4"><span class="section-number-3">1.4</span> File organization and Documentation Development.</h3>
+  <div class="outline-text-3" id="text-1-4">
+  
+  <p>All project-related documentation, including key e-mails used to update project methodology, should be saved within the project directory. Resources for directory setup and file development include:
+  </p>
+  </div>
+  
+  <div id="outline-container-1-4-1" class="outline-4">
+  <h4 id="sec-1-4-1"><span class="section-number-4">1.4.1</span> Managing MCHP resources</h4>
+  <div class="outline-text-4" id="text-1-4-1">
+  
+  <p>This includes various process documents as well as an overview of the documentation process for incorporating research carried out by MCHP into online resources: Documentation Management Guide (internal)
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-4-2" class="outline-4">
+  <h4 id="sec-1-4-2"><span class="section-number-4">1.4.2</span> MCHP directory structure</h4>
+  <div class="outline-text-4" id="text-1-4-2">
+  
+  <p>A detailed outline of how the Windows environment is structured at MCHP
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-4-3" class="outline-4">
+  <h4 id="sec-1-4-3"><span class="section-number-4">1.4.3</span> Managing project files</h4>
+  <div class="outline-text-4" id="text-1-4-3">
+  
+  <p>How files and sub-directories should be organized and named as per the MCHP Guide to Managing Project Files (internal pdf). Information that may be suitable for incorporating into MCHP online resources should be identified; for example, a Concept Development section for subsequent integration of a new concept(s) into the MCHP
+  Concept Dictionary. The deliverable glossary is another resource typically integrated into the MCHP Glossary.
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-4-4" class="outline-4">
+  <h4 id="sec-1-4-4"><span class="section-number-4">1.4.4</span> Recommended Directories</h4>
+  <div class="outline-text-4" id="text-1-4-4">
+  
+  <p>NOTE this is a diversion from the MCHP guidelines.  These recommended directories are from a combination of sources that we have synthesised.
+  </p><ul>
+  <li id="sec-1-4-4-1">Background: concise summaries: possibly many documents for main project and any main analyses based on the 1:3:25 paradigm: one page of main messages; a three-page executive summary; 25 pages of detailed findings.<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-2">Proposals: for documents related to grant applications.<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-3">Approvals: for ethics applications.<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-4">Budget: spreadsheets and so-forth.<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-5">Data<br/>
+  <ul>
+  <li id="sec-1-4-4-5-1">dataset1<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-5-2">dataset2<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6">Paper1<br/>
+  <ul>
+  <li id="sec-1-4-4-6-1">Data<br/>
+  <ul>
+  <li id="sec-1-4-4-6-1-1">merged dataset1 and 2<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2">Analysis (also see <a href="http://projecttemplate.net">http://projecttemplate.net</a> for a programmer oriented template)<br/>
+  <ul>
+  <li id="sec-1-4-4-6-2-1">exploratory analyses<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-2">data cleaning<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-3">main analysis<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-4">sensitivity analysis<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-5">data checking<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-6">model checking<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-2-7">internal review<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-3">Document<br/>
+  <ul>
+  <li id="sec-1-4-4-6-3-1">Draft<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-3-2">Journal1<br/>
+  <ul>
+  <li id="sec-1-4-4-6-3-2-1">rejected? :-(<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-3-3">Journal2<br/>
+  <ul>
+  <li id="sec-1-4-4-6-3-3-1">Response to reviews<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-4">Versions: folders named by date - dump entire copies of the project at certain milestones/change points<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-6-5">Archiving final data with final published paper<br/>
+  </li>
+  </ul>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-7">Papers 2, 3, etc: same structure as paper 1 hopefully the project spawns several papers<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-8">Communication: details of communication with stakeholders and decision makers<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-9">Meetings: for organisation and records of meetings<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-10">Contact details. table contacts lists<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-11">Completion: checklists to make sure project completion is systematic.  Factor in a critical reflection of lessons learnt.<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-4-4-12">References<br/>
+  </li>
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-5" class="outline-3">
+  <h3 id="sec-1-5"><span class="section-number-3">1.5</span> Communication</h3>
+  <div class="outline-text-3" id="text-1-5">
+  
+  <p>Project communication should be in written form, wherever possible, to serve as reference for project documentation. Access and confidentiality clearance levels for all involved in the project will determine whether separate communication plans need to be considered for confidential information.
+  </p>
+  </div>
+  
+  <div id="outline-container-1-5-1" class="outline-4">
+  <h4 id="sec-1-5-1"><span class="section-number-4">1.5.1</span> E-mail</h4>
+  <div class="outline-text-4" id="text-1-5-1">
+  
+  <p>provides opportunities for feedback/ discussion from everyone and for documenting key project decisions. Responses on any given issue would normally be copied to every project member, with the expectation of receiving feedback within a reasonable period of time - e.g.,a few days). The Research Coordinator should be copied on ALL project correspondence in order to keep the information up to date on the project website.
+  </p><ul>
+  <li id="sec-1-5-1-1">E-mail etiquette (internal)<br/>
+  </li>
+  </ul>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-5-2" class="outline-4">
+  <h4 id="sec-1-5-2"><span class="section-number-4">1.5.2</span> Meetings</h4>
+  <div class="outline-text-4" id="text-1-5-2">
+  
+  <p>Regularly-scheduled meetings or conference calls should include all project members where possible. Research Coordinators typically arrange project team meetings and take meeting minutes, while Research Support typically arranges the Working Group meetings.
+  </p><ul>
+  <li id="sec-1-5-2-1">Tips for taking notes (internal)<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-5-2-2">Outlook calendar<br/>
+  Used for booking rooms, it displays information on room availability and may include schedules of team members.
+  </li>
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-6" class="outline-3">
+  <h3 id="sec-1-6"><span class="section-number-3">1.6</span> Administrative</h3>
+  <div class="outline-text-3" id="text-1-6">
+  
+  
+  </div>
+  
+  <div id="outline-container-1-6-1" class="outline-4">
+  <h4 id="sec-1-6-1"><span class="section-number-4">1.6.1</span> Time entry</h4>
+  <div class="outline-text-4" id="text-1-6-1">
+  
+  <p>Time spent on projects should be entered by all MCHP employees who are members of the project team.
+  </p><ul>
+  <li id="sec-1-6-1-1">website for time entry (internal)<br/>
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-6-1-2">procedures for time entry (internal)<br/>
+  
+  </li>
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-7" class="outline-3">
+  <h3 id="sec-1-7"><span class="section-number-3">1.7</span> Report preparation</h3>
+  <div class="outline-text-3" id="text-1-7">
+  
+  <p>This includes:
+  </p><ul>
+  <li>Policies - e.g., Dissemination of Research Findings
+  </li>
+  <li>Standards - e.g., deliverable production, use of logos, web publishing
+  </li>
+  <li>Guidelines - e.g., producing PDFs, powerpoint, and Reference Manager files
+  </li>
+  <li>Other resources - e.g., e-mail etiquette, technical resources, photos.
+  </li>
+  </ul>
+  
+  
+  
+  </div>
+  
+  <div id="outline-container-1-7-1" class="outline-4">
+  <h4 id="sec-1-7-1"><span class="section-number-4">1.7.1</span> Reliability and Validity Checks</h4>
+  <div class="outline-text-4" id="text-1-7-1">
+  
+  <p>Making sure the numbers "make sense". Carrying out these checks requires spelling out who will do which checks.
+  </p><ul>
+  <li id="sec-1-7-1-1">Data Validity Checks<br/>
+  A variety of things to check for at various stages of the study. Programming can be reviewed, for example, by checking to ensure all programs have used the right exclusions, the correct definitions, etc. , and output has been accurately transferred to graphs, tables, and maps for the report.
+  </li>
+  </ul>
+  <ul>
+  <li id="sec-1-7-1-2">Discrepancies between data sources<br/>
+  In this case it is MCHP and Manitoba Health Reports - an example of cross-checking against another source of data.
+  </li>
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  
+  <div id="outline-container-1-8" class="outline-3">
+  <h3 id="sec-1-8"><span class="section-number-3">1.8</span> Project Completion</h3>
+  <div class="outline-text-3" id="text-1-8">
+  
+  <p>Several steps need to take place to "finish" the project:
+  </p>
+  </div>
+  
+  <div id="outline-container-1-8-1" class="outline-4">
+  <h4 id="sec-1-8-1"><span class="section-number-4">1.8.1</span> Final Project Meeting.</h4>
+  <div class="outline-text-4" id="text-1-8-1">
+  
+  <p>Wind-up or debriefing meetings are held shortly after public release of a deliverable. Such meetings provide all team members with an opportunity to communicate what worked/did not work in bringing the project to completion, providing lessons learned for future deliverables.
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-8-2" class="outline-4">
+  <h4 id="sec-1-8-2"><span class="section-number-4">1.8.2</span> Final Documentation Review.</h4>
+  <div class="outline-text-4" id="text-1-8-2">
+  
+  <p>Findings from the wind-up meeting should be used to update and finalize the project website (including entering the date of release of report/paper). Both Windows and Unix project directories should be reviewed to ensure that only those SAS programs relevant to project analyses are kept (and well-documented) for future reference. Any related files which may be stored in a user directory should be moved to the project directory.
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-8-3" class="outline-4">
+  <h4 id="sec-1-8-3"><span class="section-number-4">1.8.3</span> System Cleanup.</h4>
+  <div class="outline-text-4" id="text-1-8-3">
+  
+  <p>When the project is complete, the Systems Administrator should be informed. Project directories, including program files and output data sets, will be archived to tape or CD. Tape backups are retained for a 5-year period before being destroyed so any project may be restored up to five years after completion.
+  </p></div>
+  
+  </div>
+  
+  <div id="outline-container-1-8-4" class="outline-4">
+  <h4 id="sec-1-8-4"><span class="section-number-4">1.8.4</span> Integration of new material to institution repository</h4>
+  <div class="outline-text-4" id="text-1-8-4">
+  
+  <p>This is with MCHP resource repository - a general overview of this process is described in General Documentation Process {internal}.
+  </p></div>
+  </div>
+  </div>
+  </div>
+  </div>
+  
+  </body>
+      
+#+end_src
+
 * Research Protocols
 ** 2013-11-27-sharing-and-extending-research-protocols
 #+name:sharing-and-extending-research-protocols-header
